plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly { extendsFrom annotationProcessor }
}

// ✅ repositories 블록 제거

dependencies {
    // --- Spring Boot ---
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // DB 마이그레이션
    implementation 'org.flywaydb:flyway-core'

    // OpenAPI (Swagger UI)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // DTO 매핑(선택)
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // DB Driver (MySQL)
    runtimeOnly 'com.mysql:mysql-connector-j'

    // --- Test ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
    testImplementation 'org.testcontainers:mysql:1.20.1'

    // --- AWS Spring Cloud (SQS) ---
    implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.0.2')
    implementation('io.awspring.cloud:spring-cloud-aws-starter-sqs') {
        exclude group: 'software.amazon.awssdk'
    }

    // --- AWS SDK v2 : BOM 고정 ---
    implementation platform('software.amazon.awssdk:bom:2.25.62')
    implementation 'software.amazon.awssdk:sqs'
    implementation 'software.amazon.awssdk:cloudwatch'
    implementation 'software.amazon.awssdk:cloudwatchlogs'
}

tasks.named('test') { useJUnitPlatform() }

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-parameters', '-Amapstruct.defaultComponentModel=spring']
}
